--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@nguniversal/express-engine": "^7.1.1",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.1",
+    "ngx-cookie": "^4.1.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "xlsx": "^0.14.2",
