--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "core-js": "^2.5.4",
     "file-saver": "^2.0.1",
     "gh-pages": "^2.1.1",
+    "hosted-git-info": "2.8.9",
     "ngx-cookie": "^4.1.2",
+    "node-sass": "4.12.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "xlsx": "^0.14.2",
